--- a/src/pages/news/news.scss
+++ b/src/pages/news/news.scss
@@ -28,7 +28,7 @@ page-news {
 		}
 	}
 
-	.map{
+	.map2{
 		margin:0 !important;
 	}
 
@@ -183,6 +183,19 @@ page-news {
 		height: 50vh;
 		margin: 0 auto;
 		box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+		margin: 0 auto;
+		// border: 3px solid rgb(29,29,29);
+	}
+
+	#map {
+    height: 100%;
+    box-shadow:0 0 20px rgba(0,0,0,0.3);
+	}
+	.mapContainer2 {
+		width: 95%;
+		height: 50vh;
+		margin: 0 auto;
+		box-shadow:0 0px 20px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
 		margin: 0 auto;
 		// border: 3px solid rgb(29,29,29);
 	}
