--- a/src/pages/notifications/notifications.scss
+++ b/src/pages/notifications/notifications.scss
@@ -218,12 +218,16 @@ page-notifications {
         overflow: hidden;
         font-size: 1.5rem;
         input {
-            padding: 5px;
+            padding: 15px;
+            background-color:#EEF1EF;
+            border:none;
         }
         button {
             color: #ffffff;
             font-size: 1.5rem;
             background: rgb(196,148,51);
+            border: none;
+            width:100px !important;
         }
     }
 
@@ -238,7 +242,7 @@ page-notifications {
         border-radius: 20px !important;
     }
 
-    .contentSections2 {
+   .contentSections2 {
         margin: 0 auto;
         text-align: left;
         padding: 10px 15px;
@@ -286,6 +290,21 @@ page-notifications {
             }
             .subTexts { margin-bottom: 50px !important; }
         }
+        	.menu-button {
+        text-align: center;
+        margin: 0 auto !important;
+        margin-top: 20px !important;
+        width: 20% !important;
+        background: rgb(196,148,51);
+        color: white;
+        border-radius: 20px;
+        h2 {
+            text-align: center;
+        font-family: 'Roboto' !important;
+        margin: 0 auto !important;
+            font-size: 15px !important;
+        }
+    }
     }
 
     .contentSections {
@@ -381,14 +400,75 @@ page-notifications {
             }
         }
     }
+    .slideHolder2{
+        padding-bottom:30px;
+    }
 
-    .image-holder2 {
+    .swiper-pagination-bullet-active {
+    background: #C49433;
+    opacity: 1 !important;
+    height: 35px;
+
+}
+    .swiper-pagination-bullet {
+    border-radius: 0%;
+    display: inline-block;
+    width: 8px;
+    opacity: .2;
+    pointer-events: auto;
+    transition: all ease-in-out .2s;
+
+}
+
+.slide-image {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    margin: 0 auto 20px;
+    overflow: hidden;
+}
+
+
+.swiper-pagination {
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+    ion-icon{
+        margin-right: 10px;
+    }
+
+     .inputSection {
+        display: inline-flex;
+        border-radius: 50px;
+        border: 2px solid rgb(196,148,51);
+        overflow: hidden;
+        font-size: 1.5rem;
+        input {
+            padding: 15px;
+            background-color:#EEF1EF;
+            border:none;
+        }
+        button {
+            color: #ffffff;
+            font-size: 1.5rem;
+            background: rgb(196,148,51);
+            border: none;
+            width:100px !important;
+        }
+    }
+   .image-holder2 {
             margin: auto !important;
             text-align: center;
-            padding: 20px 0px !important;
+            padding: 85px 0px !important;
             .show2 {
                 padding: 40px;
-                ion-icon {
+                text-align: center !important;
+                i {
                     font-size: 4rem;
                 }
                 h2, h6 {
@@ -400,14 +480,13 @@ page-notifications {
                 }
             }
         }
-
     .testimonial{
         width: 40% !important;
     }
 
     .thSection {
             text-align: center;
-            margin-bottom: 70px;
+            margin-bottom: 70px !important;
             background: rgba(184, 184, 184, 0.11);
             
         .mainTexts {
@@ -418,6 +497,17 @@ page-notifications {
             border-radius: 50%;
             height: 100px;
             width: 100px;
+        }
+        .slide-image{
+            img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
         }
         .subTexts {
             line-height: 2;
@@ -511,6 +601,62 @@ page-notifications {
            
         }
     }
+    .mapContainer2 {
+        width: 95%;
+        height: 50vh;
+        margin: 0 auto;
+        box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+        margin: 0 auto;
+    }
+    .story {
+        margin: 0 auto;
+        text-align: left;
+        padding: 50px 15px;
+        hr {
+            width: 50%;
+            background: rgb(196,148,51);
+            height: 5px;
+            text-align: left;
+            margin: -10px 0px;
+        }
+        .mainTexts {
+            font-size: 2.5rem;
+            margin-top: 0px !important;
+            z-index: 999999;
+        }
+        .lestMainTexts { 
+            font-size: 1.8rem; 
+            line-height: 2;
+        }
+        .subTexts {
+            color: rgb(102,102,102);
+            // padding: 0px 25px;
+            margin: 0 auto !important;
+            font-size: 1.5rem;
+            p { 
+                line-height: 2;
+            }
+        }
+        .alarmIcon {
+            font-size: 6rem;
+        }
+        .sched {
+            h4 { font-size: 1.5rem !important; }
+        }
+        .subDesc {
+            margin-top: 20px;
+            h2 {
+                font-family: 'Allura';
+                font-weight: bold;
+                font-size: 3.5rem;
+            }
+            h3 {
+                font-family: 'Josef Sans';
+                font-size: 1.5rem;
+            }
+            .subTexts { margin-bottom: 50px !important; }
+        }
+    }
     .mobile-footer {
         // border-radius: 0px 80px 0px 0px;
         color: #ffffff;
@@ -534,7 +680,7 @@ page-notifications {
     }
 
     .space{
-        margin-bottom:100px;
+        margin-bottom:70px;
     }
     .timeSched {
         text-align: center;
@@ -544,13 +690,12 @@ page-notifications {
 	.menu-button {
         text-align: center;
         margin: 0 auto !important;
-        margin-top: 20px !important;
+        margin-top: 20px;
         width: 20% !important;
         background: rgb(196,148,51);
         color: white;
         border-radius: 20px;
         h2 {
-            margin: 0 auto !important;
             font-size: 15px !important;
         }
     }
