--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -167,6 +167,7 @@ ion-toolbar {
     .menuHeader {
             width: 100%;
             text-align: center;
+            height: 32vh;
         img {
             height: 20vh;
             margin: 0 auto;
