--- a/src/pages/gallery-tabs/gallery-tabs.scss
+++ b/src/pages/gallery-tabs/gallery-tabs.scss
@@ -37,6 +37,21 @@ page-gallery-tabs {
             padding: 0px !important;
             text-align: left !important;
         }
+          .inputSection {
+        display: inline-flex;
+        border-radius: 50px;
+        border: 2px solid rgb(196,148,51);
+        overflow: hidden;
+        font-size: 1.5rem;
+        input {
+            padding: 5px;
+        }
+        button {
+            color: #ffffff;
+            font-size: 1.5rem;
+            background: rgb(196,148,51);
+        }
+    }
     }
 
    h1 {
