--- a/src/pages/news/news.scss
+++ b/src/pages/news/news.scss
@@ -172,7 +172,22 @@ page-news {
         .contactUs {
             padding: 0px !important;
             text-align: left !important;
+		}
+		  .inputSection {
+        display: inline-flex;
+        border-radius: 50px;
+        border: 2px solid rgb(196,148,51);
+        overflow: hidden;
+        font-size: 1.5rem;
+        input {
+            padding: 5px;
         }
+        button {
+            color: #ffffff;
+            font-size: 1.5rem;
+            background: rgb(196,148,51);
+        }
+    }
     }
 	#map {
     height: 100%;
