Fixed menu button

--- a/src/pages/catering/catering.scss
+++ b/src/pages/catering/catering.scss
@@ -561,10 +561,9 @@ page-catering {
                 
             }
             .menu-button {
-                    margin-top: 5px;
                     border-radius: 50px !important;
                     padding: 25px 30px;
-                    h2 {
+                    p {
                     font-size: 1.8rem !important;
                     }
                 }
