--- a/src/pages/gallery-tabs/gallery-tabs.scss
+++ b/src/pages/gallery-tabs/gallery-tabs.scss
@@ -732,10 +732,11 @@ page-gallery-tabs {
 		padding:20px;
     }
 
-    .contact-button {
+     .contact-button {
         text-align: center;
         margin: 0 auto !important;
         margin-top: 20px !important;
+        padding: 5px 30px 5px 30px;
         width: 20% !important;
         background: rgb(196,148,51);
         color: white;
