--- a/src/pages/news/news.scss
+++ b/src/pages/news/news.scss
@@ -605,6 +605,7 @@ page-news {
 				border: none;
 				display: inline-flex;
 				padding-bottom: 50px;
+				overflow: hidden;
 				div {
 					border: none;
 					margin-top: 10px;
