--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -48,6 +48,8 @@ $colors: (
 
 );
 
+$card-md-box-shadow:0 3px 3px 3px;
+$card-wp-box-shadow:0 3px 3px 3px;
 
 // App iOS Variables
 // --------------------------------------------------
