Fixed carousel problem

--- a/src/pages/news/news.scss
+++ b/src/pages/news/news.scss
@@ -606,6 +606,7 @@ page-news {
 				display: inline-flex;
 				padding-bottom: 50px;
 				overflow: hidden;
+				box-shadow: none;
 				div {
 					border: none;
 					margin-top: 10px;
