Fixed root page

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -71,4 +71,4 @@
 
 
 <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
-<ion-nav [root]="'NewsPage'" #content swipeBackEnabled="false"></ion-nav>
+<ion-nav [root]="'HomePage'" #content swipeBackEnabled="false"></ion-nav>
