--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,68 +1,857 @@
 page-home {
-
-
-
-	.tallHeader{
-		height:100px;
+	.content {
+		 padding-right: calc((100% - 1100px)/ 2) !important;
+	padding-left: calc((100% - 1100px)/ 2) !important;
+	//  background: rgba(201, 200, 200, 0.11) !important
+	}
+	.title, .subTitle {
+		text-align: center !important; 
+		font-family: 'Crete Round',Georgia,'Times New Roman',serif;
+		color: white;
+		font-weight: 500;
+	}
+	.bar-header {
+		color: black !important; 
+		.button-header {
+			text-align: center;
+			margin: 0px auto !important;
+			// margin-top: 20px !important;
+			background: rgb(196,148,51);
+			color: white;
+			width: 100%;
+			border-radius: 10px;
+			padding: 18px;
+			h2 {
+				margin: 0 auto !important;
+				font-size: 15px !important;
+			}
+		}
 	}
 
-	ion-row{
-		text-align: center !important;
-	}
-	ion-col{
-
-	}
-	.social{
-		position: absolute;
-		width: 100%;
-		text-align: right;
-		padding: 10px;
-		margin-right: 10px;
-
-	}
-	.social-icon{
-		font-size: 30px;
-		margin-right: 16px;
-	}
-	.show{
-		width: 5vw !important;
-		max-height: 25vh !important;
-		min-height: 25vh !important;
-		height: auto;
-		padding:2px;
-		margin:0px;
-
+	.map2{
+		margin:0 !important;
 	}
 
+	.welcomeText {
+		font-size: 4rem !important;
+		margin: 0px auto;
+		font-weight: 500;
+	}
+	.mainTitles {
+		border: 2px solid #ffffff;
+		h2 {
+			color: rgb(196,148,51);
+			font-weight: bold;
+			font-size: 5rem;
+			padding: 0px !important;
+			margin: 0px auto;
+		}
+		h3 {
+			color: #ffffff;
+			font-weight: bold;
+			font-size: 3rem;
+		}
+	}
 	
-	.imgIcon{
-		
-		//display: none;
-		margin: 0 auto !important;
-		position:  absolute;
-		//width:100%;
-		//height: 100%;
 
-		top:40%;
-		font-size:  40px;
-		//opacity: 0.6;
-		z-index: 99;
+	.ftrLine {
+        margin-top: 0px !important;
+        margin-bottom: 20px !important;
+        margin-left:0px !important;
+        width: 20% !important;
+        height: 3px !important;
+        background: #C49433 !important;
+        text-align:left;
+        border-radius: 20px !important;
+    }
 
+    .slidesContainer {
+		position: relative;
+		.leftButton, .rightButton {
+			position: absolute;
+			z-index: 99999;
+			bottom: 200px;
+			font-size: 10rem;
+			color: #C49433 !important;
+			font-weight: bold;
+			background: none !important;
+		}
+			.rightButton {
+				
+				right: -5vw;
+			}
+			.leftButton {
+				left: -5vw;
+			}
 	}
+
+	.secndSection {
+		padding: 0px 10px !important;
+		position: relative;
+		width: 100%;
+		height: 100%;
+		height: 135vh;
+		.mainTitle {
+			padding: 50px 0px;
+		 background: url('../assets/imgs/banner/homepage Menu for today.png');
+		 background-size: contain;
+			height: 50vh;
+		}
+		.subTexts {
+			position: absolute;
+			top: 180px;
+			right: 0;
+		}
+	}
+	.goldenText { color: rgb(196,148,51);  }
+	.cover {
+		// border-radius: 0px 0px 0px 150px !important;
+		// background-image: url("assets/");
+		position: relative;
+		box-shadow: -200px -35px 75px -51px rgba(0,0,0,0.75);
+		border: .5px solid black;
+		// height: 40vh;
+		height: 50vh;
+		img {
+			max-width: 110% !important;
+		}
+	}
+
+	.cover2 {
+		background: url('../assets/imgs/banner/homepage.png') no-repeat center center fixed;		
+		border: .5px solid black;
+        height: 45vw;
+        max-height:700px;
+        		min-height:300px;
+        // height: 40vh;
+        img {
+                
+    			width: 100%;
+        }
+	}
+
+	.fullGrid {
+		padding:0px !important;
+	}
+
+
+	.menuDay{
+		background-image: url("assets/imgs/banner/homepageMenu for today.png");
+	}
+
+	.image {
+		min-height:30vw;
+		max-height:60vw;
+		width:100%;
+	}
+
+	.textTopR {
+		font-size: 1.5rem !important;
+		font-weight: 500;
+	}
+	.headText {
+		font-family: Roboto;
+		margin: 30px 0px 0px 0px;
+		font-size: 2.5rem !important;
+		padding: 0px 15px;
+		color: black !important;
+	}
+	.titles {
+		color: rgb(59,55,52) !important;
+		padding: 0px 10px;
+		font-weight: 700;
+		font-size: 3.5rem;
+	}
+	 .iconFont {
+        top: 2px !important;
+		position: relative !important;
+		margin-right: 0px !important;
+	}
+	  .mobSections {
+		  font-family: 'Josef Sans' !important;
+        .contactUs {
+            padding: 0px !important;
+            text-align: left !important;
+		}
+		  .inputSection {
+        display: inline-flex;
+        border-radius: 50px;
+        border: 2px solid rgb(196,148,51);
+        overflow: hidden;
+        font-size: 1.5rem;
+        input {
+            padding: 5px;
+        }
+        button {
+            color: #ffffff;
+            font-size: 1.5rem;
+            background: rgb(196,148,51);
+        }
+    }
+    }
+	#map {
+    height: 100%;
+    box-shadow:0 0 20px rgba(0,0,0,0.3);
+	}
+	.mapContainer {
+		width: 95%;
+		height: 50vh;
+		margin: 0 auto;
+		box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+		margin: 0 auto;
+		// border: 3px solid rgb(29,29,29);
+	}
+
+	#map {
+    height: 100%;
+    box-shadow:0 0 20px rgba(0,0,0,0.3);
+	}
+	.mapContainer2 {
+		width: 95%;
+		height: 50vh;
+		margin: 0 auto;
+		box-shadow:0 0px 20px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+		margin: 0 auto;
+		// border: 3px solid rgb(29,29,29);
+	}
+	.inputSection {
+        display: inline-flex;
+        border-radius: 50px;
+        border: 2px solid rgb(196,148,51);
+        overflow: hidden;
+        font-size: 1.5rem;
+        input {
+            padding: 15px;
+            background-color:#EEF1EF;
+            border:none;
+        }
+        button {
+            color: #ffffff;
+            font-size: 1.5rem;
+            background: rgb(196,148,51);
+            border: none;
+            width:100px !important;
+        }
+    }
+	
+	.show {
+		height: auto;
+		padding: 10px;
+		margin:0px;
+		position: relative;
+		img {
+			// border: 2px solid #c2c0c0;
+			// box-shadow: 0 10px 6px -6px rgb(196,148,51); 
+			max-height: 30vh !important;
+			min-height: 30vh !important;
+			width: 100%;
+		}
+		.subtitle {
+			position: absolute;
+			bottom: 0;
+			// margin-bottom: 10px;
+			margin-left: 2px;
+			// font-family: 'Crete Round',Georgia,'Times New Roman',serif;
+			width: 92%;
+			// background: rgba(0, 0, 0, 0.5);
+			border-radius: 0px 5px 0px 0px;
+			text-align: center;
+			color: #ffffff;
+         	background: linear-gradient(to top, rgba(42,34,45, 0.6) 10%,rgba(29, 29, 29, 0) 100%);
+			// top: 75px;
+			h6 {
+				font-weight: bold !important;
+				font-size: 1.8rem !important;
+				padding-bottom: 20px;
+			}
+		}
+	}
+	
+
+	.show2{
+		height: 20vw;
+		padding: 20px;
+		margin:0px;
+		width: 100%;
+		img {
+			height:25vw !important;
+			max-height: 450px !important;
+			min-height:250px !important;
+			width: 100%;
+		}
+	}
+	.contentLessSpace {
+		padding: 0px 20px 50px 20px !important;
+	}
+	.category{
+		
+		height:25vw !important;
+	}
+
+	.category2{
+		height:25vw !important;
+	}
+
 	.image-holder {
 		position: relative;
 		.subtitle {
 			position: absolute;
 			bottom: 0;
-			min-height: 2vh;
-			width: 75%;
-			margin: 2px 2px 6px 2px;
-			background: rgba(0, 0, 0, 0.5);
+			margin-bottom: 15px;
+			// font-family: 'Crete Round',Georgia,'Times New Roman',serif;
+			// width: 93%;
+			// background: rgba(0, 0, 0, 0.5);
 			border-radius: 0px 5px 0px 0px;
-			text-align: left;
+			text-align: center;
 			color: #ffffff;
-			padding-left: 10px;
+			// top: 75px;
+			h6 {
+				font-weight: bold !important;
+				font-size: 1.8rem !important;
+			}
 		}
 	}
-	
+
+	.category{
+		
+		height:25vw !important;
+	}
+	.image-holder {
+		
+	}
+	.texts {
+		position: absolute;
+		left: 0;
+		right: 0;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: 50px;
+		width: 300px;
+		text-align: center;
+	}
+
+	.texts2 {
+		position: absolute;
+		left: 0;
+		right: 0;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: 210px;
+		text-align: center;
+		padding:20px;
+	}
+
+	.rectangle{
+		border: 5px solid white;
+		padding: 5px 30px;
+	}
+
+	.welcome{
+		position: absolute;
+		left: 0;
+		right: 0;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: 150px;
+		width: 500px;
+	}
+
+	.welcome2{
+		left: 0;
+		right: 0;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: 100px;
+	}
+
+	.mobile-footer {
+		// border-radius: 0px 80px 0px 0px;
+		color: #ffffff;
+		.eatIcon {
+			font-size: 3.5rem;
+			position: absolute;	
+			top: 20px;
+			right: 20px;
+			.eatIconContent {
+				position: relative;
+				display: inline-flex;
+				.eatSubText {
+					font-size: 1.2rem;
+					width: 20vw;
+					margin-top: 5px !important;
+				}		
+			}
+		}		
+		
+	}
+
+	.contentSections {
+        margin: 0 auto;
+        width: 95%;
+        // height: 50vh;
+        text-align: center;
+        padding: 40px 10px 90px 10px;
+        .mainTexts {
+            font-size: 2.5rem;
+        }
+          hr {
+            width: 50%;
+            background: rgb(196,148,51);
+            height: 5px;
+            text-align: left;
+            margin: -10px 0px;
+        }
+        .lestMainTexts { font-size: 2rem; }
+        .subTexts {
+            color: rgb(102,102,102);
+            padding: 0px 25px;
+            margin: 0 auto !important;
+            font-size: 1.5rem;
+            p { 
+                line-height: 1.8;
+            }
+        }
+        .alarmIcon {
+            font-size: 6rem;
+        }
+        .sched {
+            h4 { font-size: 2rem !important; }
+        }
+    }
+
+    .contentSections2 {
+        margin: 0 auto;
+        width: 95%;
+        height: 50vh;
+        text-align: center;
+        padding: 10px 10px 90px 10px;
+        .mainTexts {
+            font-size: 2.5rem;
+        }
+          hr {
+            width: 50%;
+            background: rgb(196,148,51);
+            height: 5px;
+            text-align: left;
+            margin: -10px 0px;
+        }
+        .lestMainTexts { font-size: 2rem; }
+        .subTexts {
+            color: rgb(102,102,102);
+            padding: 0px 25px;
+            margin: 0 auto !important;
+            font-size: 1.5rem;
+            p { 
+                line-height: 1.8;
+            }
+        }
+        .alarmIcon {
+            font-size: 6rem;
+        }
+        .sched {
+            h4 { font-size: 2rem !important; }
+        }
+    }
+    
+	.desc {
+		color: #ffffff;
+		padding: 5px;
+		background: rgb(196,148,51);
+		 box-shadow: 0 10px 6px -6px #777;
+		position: relative;
+		margin-top: 30px;
+		img {
+			height: 140px;
+			position: absolute;
+			right: 0;
+			margin-right: -20px;
+			top: -75px !important;
+		}
+	}
+
+	.desc2 {
+		color: #ffffff;
+		padding: 5px;
+		background: rgb(196,148,51);
+		 box-shadow: 0 10px 6px -6px #777;
+		position: relative;
+		margin-top: 250px;
+		img {
+			height: 140px;
+			position: absolute;
+			right: 0;
+			margin-right: -20px;
+			top: -70px;
+		}
+	}
+
+
+	// Slides
+	.slidesHolder {
+		margin-bottom: 10px;
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+		.slides {
+			
+			padding: 0px 10px 10px 10px;
+			// border: 1px solid black;
+			.slidesCard {
+				width: 100%;
+				display: inline-flex;
+				padding: 5px 20px 20px 20px;
+				div {
+					// margin-left: 10px;
+					// width: 90%;
+						width: 50%;
+					padding: 5px;
+					text-align: center;
+					div {
+						width: 100%;
+					}
+					p {
+						padding: 10px;
+						margin: 0 auto;
+						height:50px;
+						border-radius:50%;
+						-moz-border-radius:50%;
+						-webkit-border-radius:50%;
+						min-width:50px !important;
+						max-width: 50px;
+						// border: 2px solid rgba(211, 35, 35,1);
+						// background: rgba(211, 35, 35,1);
+						color: #ffffff;
+						background: rgb(196,148,51); 
+						font-weight: bold;
+						font-size: 25px;
+						text-align: center;
+						ion-icon {
+							margin: 0 auto;
+						}
+					}
+					ion-label {
+						text-align: center;
+						margin: 0 auto;
+						margin-top: 10px !important;
+						word-wrap: unset;
+						hr {
+							font-weight: 500;
+							width: 30%;
+							background: rgb(196,148,51); 
+							height: 2px;
+							border-radius: 5px;
+							margin-top: 2px;
+						}
+						span {
+							color: rgb(196,148,51); 
+						}
+					}
+				}
+			
+			}
+		}
+		.lastSlide {
+			height: 100%;
+			.slidesCard {
+				height: 269px;
+				div {
+					width: 100% !important;
+					margin: auto;
+				}
+			}
+		}
+	}
+	.hrFoot {
+		margin-top: 0px !important;
+		margin-bottom: 20px !important;
+		margin-left: 0px !important;
+		width: 20% !important;
+		height: 3px !important;
+		background: #C49433 !important;
+		text-align: left;
+		border-radius: 20px !important;
+    }
+
+    .contact-button {
+        text-align: center;
+        margin: 0 auto !important;
+        margin-top: 20px !important;
+        width: 23% !important;
+        background: rgb(196,148,51);
+        padding: 0px 20px;
+        color: white;
+        border-radius: 20px;
+        h2 {
+            margin: 0 auto !important;
+            font-size: 15px !important;
+        }
+    }
+
+	.slidesHolder2 {
+		margin-bottom: 10px;
+		border: none;
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+		position: relative;
+		// .buttonNav {
+		// 	right: 0;
+		// 	bottom: 0;
+		// 	background: black;
+		// }
+		#next, #prev {
+					display: none;
+				}
+		.slides2 {
+			overflow: hidden;
+			border: none;
+			.slidesCard2 {
+				width: 100%;
+				border: none;
+				display: inline-flex;
+				padding-bottom: 50px;
+				overflow: hidden;
+				box-shadow: none;
+				div {
+					border: none;
+					margin-top: 10px;
+					margin-left: 10px;
+					width: 90%;
+					padding: 10px;
+					text-align: center;
+					div {
+						border: 1px solid rgba(0, 0, 0, 0.116);	
+						box-shadow: 0px 0px 7px 5px rgba(0, 0, 0, 0.116);
+						padding: 20px;
+						border-radius: 5px;
+						}
+					p {
+						padding: 10px;
+						margin: 0 auto;
+						height:120px;
+						border-radius:50%;
+						-moz-border-radius:50%;
+						-webkit-border-radius:50%;
+						min-width:120px !important;
+						max-width: 120px;
+						// border: 2px solid rgba(211, 35, 35,1);
+						// background: rgba(211, 35, 35,1);
+						color: #ffffff;
+						background: rgb(196,148,51); 
+						font-weight: bold;
+						font-size: 50px;
+						text-align: center;
+						ion-icon {
+							margin: 20px 0 0 0;
+							font-size:50px;
+						}
+					}
+					ion-label {
+						text-align: center;
+						font-size:20px;
+						margin: 0 auto;
+						margin-top: 10px !important;
+						hr {
+							font-weight: 500;
+							width: 30%;
+							background: rgb(196,148,51); 
+							height: 2px;
+							border-radius: 5px;
+							margin-top: 2px;
+						}
+						span {
+							color: rgb(196,148,51); 
+						}
+					}
+					
+				}
+			}
+		}
+	}
+
+	.subTitle {
+		font-size: 3vw !important;
+		font-weight: bold;
+		margin-top: 5px !important;
+	}
+
+	.story {
+		margin-bottom: 40px !important;
+	}
+
+	.menu-button {
+		text-align: center;
+		margin: 0 auto !important;
+		margin-top: 20px !important;
+		width: 50% !important;
+		background: rgb(196,148,51);
+		color: white;
+		border-radius: 10px;
+		h2 {
+			margin: 0 auto !important;
+			font-size: 16px !important;
+		}
+	}
+
+	.menu-button2 {
+padding: 0;
+text-align: center;
+margin-top: 2vw !important;
+width: 230px !important;
+margin-left: 0;
+background: #c49433;
+color: white;
+margin: 2vw auto 0 !important;
+height: 58px;
+border-radius: 25px;
+
+		h2 {
+			margin: 0 auto !important;
+			font-size: 20px !important;
+			height: inherit;
+   			line-height:60px;
+		}
+	}
+
+	.footer .footer-md {
+		background: transparent !important;
+	}
+	.button-menu-desk {
+		background: rgb(245, 61, 61) !important;
+		transition: .5s;
+	}
+	.button-menu-desk:hover {
+		background: #b11e1e !important;
+		transition: .5s;
+	}
+	.text-menu {
+		padding: 10px 20px 20px 20px;
+	}
+.colinline{
+		display: inline-block;
+		margin-right: 5px;
+		margin-left: 5px;
+	}
+
+.suggestion{
+		//max-height:60px !important;
+		//max-width:60px !important;
+		margin:0 auto;
+		padding: 1px;
+		border:1px solid lightgray;
+		border-radius: 50%;
+	}
+
+	ion-card{
+		margin:0px !important;
+		width: 100% !important;
+	}
+
+	.card-content-md{
+		padding: 5px 16px !important;
+	}
+	.card-title-md{
+		margin:0px !important;
+	}
+
+	ion-icon{
+		margin-right: 10px;
+	}
+
+	.profile-image{
+		border-top: 1px solid grey;
+	}
+	.image-holder {
+			
+			width: 100%;
+		.images {
+			img {
+				max-height: 30vh !important;
+				width: 100% !important;
+			}
+		}
+	}
+	.desk-image-holder {
+		
+			width: 100%;
+		.images {
+			img {
+				max-height: 40vh !important;
+				border-radius: 3px;
+				
+				box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+				width: 100% !important;
+			}
+		}
+	}
+	.intro {
+		text-indent: 10px;
+		padding: 5px 15px 15px 15px;
+		 text-align: justify;
+		font-family: 'Josef Sans' !important;
+	}
+	.fooot {
+		word-wrap: normal;
+	}
+	.lister {
+		padding-left: 50px;
+		padding-right: 50px;
+		width: 100%;
+		ion-item {
+			ion-label {
+				width: 100%;
+				font-weight: 400;
+				span {
+					font-weight: 100;
+					float: right !important;
+				}
+			}
+		}
+	}
+	.listy {
+		
+    color: rgb(196,148,51) !important;
+		width: 100%;
+		display: inline-flex;
+		div {
+		width: 50%;
+		font-size: 1.3rem !important;
+		.item-inner {
+			border-bottom: none !important;
+		}ion-item {
+			ion-label {
+				
+				span {
+					font-weight: 500 !important;
+					color: rgb(196,148,51) !important; 
+				}
+			}
+		}
+		}
+	}
+	.deskList { 
+		ion-label { font-size: 1.6rem !important; }
+	}
+	.toolbar-title-md {
+		text-align: left !important; 
+		margin-top: 20px !important;
+		font-weight: bold !important;
+		// color: rgb(0, 0, 0) !important; 
+		background: transparent !important;
+	}
+	.no-line {
+		.item-inner {
+			border-bottom: none !important;
+		}
+	}
+	ion-toolbar {
+   --background-color: transparent;
+   --ion-color-base: transparent !important;
+ }
+ ion-navbar {
+	 background: transparent !important;
+ }
+ 	.curvyFont {
+		 font-family: 'Cookie Curvy';
+	 }
+	.menu-buttonHover {
+		margin-top: 0px !important;
+		margin-bottom: 50px !important;
+	}
 }
