time functionality, adjusted spacing, contact number

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -20,16 +20,9 @@
   <div color="goldenBrown" class="first-header headerDeskColor">
     <div>
       <ion-row color="goldenBrown">
-         <p style="padding: 10px;margin:0 !important;width:300px;"> <ion-icon name="tablet-portrait" style="margin-right:8px !important;margin-left:100px !important;vertical-align:middle;"></ion-icon> (+088) 589-8745</p>
-        <p style="padding: 10px;margin:0;width:300px"> <ion-icon  style="margin-right:8px !important;vertical-align:middle;" name="time"></ion-icon> Business Hours: 8:00am - 11:30pm</p>
-      <!-- <ion-buttons style="margin-right:0;" class="bar-buttons bar-buttons-md">
-      <button color="" ion-button="" *ngFor="let p of pagesDesk"
-        class="bar-button bar-button-md bar-button-default bar-button-default-md">
-        <span class=""></span>
-        <div class="button-effect"></div>
-      </button>
-    
-    </ion-buttons> -->
+         <p style="padding: 10px;margin:0 !important;width:300px;"> <ion-icon name="tablet-portrait" style="margin-right:8px !important;margin-left:100px !important;vertical-align:middle;"></ion-icon> (323) 229-0228</p>
+        <p style="padding: 10px;margin:0;width:300px"> <ion-icon  style="margin-right:8px !important;vertical-align:middle;" name="time"></ion-icon> Business Hours: {{ currentSched }}</p>
+     
       </ion-row>
     
     </div>
@@ -37,11 +30,9 @@
     
     </div>
     <ion-navbar  color="white" class="bar-header">
-      <!-- <button ion-button menuToggle>
-        <ion-icon name="menu" class="bar-header"></ion-icon>
-      </button> -->
+      
       <img src="assets/imgs/logoName.png" height="60px;" style="margin-left:100px;">
-      <!-- <ion-title style="color: red !important;">Kusina Filipina</ion-title> -->
+      
     
     <ion-buttons end="" margin-left="" class="bar-buttons bar-buttons-md" style="margin-right:100px;">
       <button color="" ion-button="" *ngFor="let p of pagesDesk" (click)="openPage(p)"
@@ -53,17 +44,6 @@
     </ion-buttons>
     
     </ion-navbar>
-    <!-- <ion-toolbar class="toolbar toolbar-md" >
-      <div class="" ></div>
-      <ion-buttons left="" class="bar-buttons bar-buttons-md">
-       
-        <a class="logo" tappable="" (click)="goTo()">
-        <ion-title class="MenuTitle">KUSINA FILIPINA</ion-title>
-        </a>
-      </ion-buttons>
-     
-      
-    </ion-toolbar> -->
     
     
 </ion-header>
