--- a/src/pages/catering/catering.scss
+++ b/src/pages/catering/catering.scss
@@ -883,5 +883,9 @@ page-catering {
     		height: 460px;
     	}  
     }
+    /*BROWSER SCREEN CSS*/
 
+    .eventsContentDesk {
+    
+    }    
 }
