--- a/src/pages/news/news.scss
+++ b/src/pages/news/news.scss
@@ -93,7 +93,7 @@ page-news {
 		height: 135vh;
 		.mainTitle {
 			padding: 50px 0px;
-		 background: url('../assets/imgs/banner/homepage Menu for today.png');
+		 background: url('../assets/imgs/banner/homepageMenu for today.png');
 		 background-size: contain;
 			height: 50vh;
 		}
