--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -157,7 +157,7 @@ ion-toolbar {
         }
         h5 {
             right: 0;
-            font-size: 1.2rem;
+            font-size: 1.2rem !important;
             font-weight: bold;
             padding-left: 10px;
             margin-bottom: 0px !important;
