--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -368,6 +368,9 @@ page-contact {
     .mobile-footer {
 		// border-radius: 0px 80px 0px 0px;
 		color: #ffffff;
+        h5 {
+            margin: 0px !important;
+        }
 		.eatIcon {
 			font-size: 3.5rem;
 			position: absolute;	
@@ -476,10 +479,7 @@ page-contact {
         }
     }
 
-.icon{
-    font-size:40px;
-    margin-top:10px;
-}
+
 
    h1 {
         font-size: 4rem !important;
@@ -495,11 +495,16 @@ page-contact {
         font-size: 4.8vw;
         font-family: Arial, Helvetica, sans-serif;
     }
-    .iconFont {
+    /*.iconFont {
         font-size: 2rem;
         top: 3px !important;
         position: relative !important;
-    }
+    }*/
+    .icon2{
+    font-size:40px;
+    margin-top:10px;
+}
+
         .content {
             width:100% !important;
             padding:0 !important;
