changed image background

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -118,7 +118,8 @@ page-home {
 	}
 
 	.cover2 {
-		background: url('../assets/imgs/banner/homepage.png') no-repeat center center fixed;		
+		background: url('../assets/imgs/banner/homepage.jpg') no-repeat center center fixed;
+		background-size: 100%;		
 		border: .5px solid black;
         height: 45vw;
         max-height:700px;
