Made icon clickable

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -31,7 +31,7 @@
     </div>
     <ion-navbar  color="white" class="bar-header">
       
-      <img src="assets/imgs/logoName.png" height="60px;" style="margin-left:100px;">
+      <img src="assets/imgs/logoName.png" height="60px;" style="margin-left:100px;cursor: pointer;" (click)="goTo()">
       
     
     <ion-buttons end="" margin-left="" class="bar-buttons bar-buttons-md" style="margin-right:100px;">
