--- a/src/pages/gallery-tabs/gallery-tabs.scss
+++ b/src/pages/gallery-tabs/gallery-tabs.scss
@@ -642,7 +642,8 @@ page-gallery-tabs {
 		padding:20px;
     }
         .deskList {
-        width: 100%;
+        width: 70%;
+        margin: 0 auto;
         text-align: center;
         padding: 80px 0px 20px 0px;
         .deskListData {
