models, UI, and Image View updates

--- a/src/pages/portfolio/portfolio.scss
+++ b/src/pages/portfolio/portfolio.scss
@@ -36,4 +36,10 @@ margin: 0px !important;
         box-shadow:          0 0 10px #000000;
     }
    }
+   .text-space {
+    padding: 10px 25px;
+   }
+   .image {
+    width: 100% !important;
+   }
 }
