--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -90,7 +90,7 @@ page-home {
 		position: relative;
 		width: 100%;
 		height: 100%;
-		height: 235vh;
+		height: 65vh;
 		.mainTitle {
 			padding: 50px 0px;
 		 background: url('../assets/imgs/banner/homepage Menu for today.png');
@@ -99,7 +99,7 @@ page-home {
 		}
 		.subTexts {
 			position: absolute;
-			top: 180px;
+			top: -50px;
 			right: 0;
 		}
 	}
@@ -239,7 +239,7 @@ page-home {
 		height: auto;
 		padding: 10px;
 		margin:0px;
-		position: relative;
+		position: absolute;
 		img {
 			// border: 2px solid #c2c0c0;
 			// box-shadow: 0 10px 6px -6px rgb(196,148,51); 
@@ -415,7 +415,7 @@ page-home {
         .subTexts {
             color: rgb(102,102,102);
             padding: 0px 25px;
-            margin: 0 auto !important;
+            /*margin: 0 auto !important;*/
             font-size: 1.5rem;
             p { 
                 line-height: 1.8;
@@ -681,14 +681,14 @@ page-home {
 		margin-top: 5px !important;
 	}
 	 .swiper-pagination-bullet-active {
-    background: #C49433;
+    background: #cc9933 !important;
     opacity: 1 !important;
 
 }
     .swiper-pagination-bullet {
     border-radius: 50%;
     display: inline-block;
-    background: #C49433;
+    background: #a07037;
     width: 8px;
     opacity: .8;
     pointer-events: auto;
