--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -27,7 +27,9 @@ page-home {
 			}
 		}
 	}
-
+	.buttonText {
+		margin: auto;
+	}
 	.map2{
 		margin:0 !important;
 	}
@@ -590,7 +592,8 @@ page-home {
         color: white;
         border-radius: 20px;
         h2 {
-            margin: 0 auto !important;
+			// margin: 0 auto !important;
+			margin-top: 1.6rem;
             font-size: 15px !important;
         }
     }
@@ -697,7 +700,7 @@ page-home {
 
 }
 	.story {
-        margin: 0 auto;
+		margin: 0 auto;
         text-align: left;
         padding: 50px 15px;
         hr {
@@ -804,6 +807,7 @@ page-home {
             width:50%;
             margin-left:25%;
             line-height: 2;
+    		padding-bottom: 40px;
             .goldenText {
                 width: 20px;
                 text-align:center;
