--- a/src/pages/catering/catering.scss
+++ b/src/pages/catering/catering.scss
@@ -195,10 +195,13 @@ page-catering {
         border: 2px solid rgb(196,148,51);
         overflow: hidden;
         font-size: 1.5rem;
+        width: 100%;
         input {
-            padding: 5px;
+            padding: 15px !important;
+            width: 80%;
         }
         button {
+            width: 20%;
             color: #ffffff;
             font-size: 1.5rem;
             background: rgb(196,148,51);
