--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -232,10 +232,12 @@ page-contact {
         border: 2px solid rgb(196,148,51);
         overflow: hidden;
         font-size: 1.5rem;
+        width: 100%;
         input {
-            padding: 5px;
+            width: 80%;
         }
         button {
+            width: 20%;
             color: #ffffff;
             font-size: 1.5rem;
             background: rgb(196,148,51);
