--- a/src/pages/gallery-tabs/gallery-tabs.scss
+++ b/src/pages/gallery-tabs/gallery-tabs.scss
@@ -43,10 +43,12 @@ page-gallery-tabs {
         border: 2px solid rgb(196,148,51);
         overflow: hidden;
         font-size: 1.5rem;
+        width: 100%;
         input {
-            padding: 5px;
+            width: 80%;
         }
         button {
+            width: 20%;
             color: #ffffff;
             font-size: 1.5rem;
             background: rgb(196,148,51);
