phone and email links, call icon at navbar toolbar, new page menu-gallery

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -20,7 +20,7 @@
   <div color="goldenBrown" class="first-header headerDeskColor">
     <div>
       <ion-row color="goldenBrown">
-         <p style="padding: 10px;margin:0 !important;width:300px;font-weight: bolder;"> <ion-icon name="tablet-portrait" style="margin-right:8px !important;margin-left:100px !important;vertical-align:middle;"></ion-icon> (323) 229-0228</p>
+         <p style="padding: 10px;margin:0 !important;width:300px;font-weight: bolder;"> <ion-icon name="call" style="margin-right:8px !important;margin-left:100px !important;vertical-align:middle;"></ion-icon> (323) 229-0228</p>
         <p style="padding: 10px;margin:0;width:300px;font-weight: bolder;"> <ion-icon  style="margin-right:8px !important;vertical-align:middle;" name="time"></ion-icon> Business Hours: {{ currentSched }}</p>
      
       </ion-row>
